# rules_prisma

./: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  go.mod  go.sum  makefile  package.json  pnpm-lock.yaml  readme.md
e2e/: BUILD.bazel  MODULE.bazel
prisma/: BUILD.bazel  base.bzl  deps.bzl  engines.bzl  go.bzl  js.bzl  wrapper.js
test/: BUILD.bazel  dev.db  schema.prisma  test.go  test.js
test/migrations/20230716210448_init/: migration.sql
