"""dependencies"""

module(name = "rules_prisma", version = "0.0.1")

download_prisma_engines = use_extension(
    "@rules_prisma//prisma:engines.bzl",
    "download_prisma_engines",
    dev_dependency = False
)
use_repo(
    download_prisma_engines,
    "prisma_query_engine_darwin",
    "prisma_query_engine_darwin-arm64",
    "prisma_query_engine_windows",
    "prisma_query_engine_debian-openssl-3.0.x",
    "prisma_query_engine_linux-arm64-openssl-3.0.x",
    "prisma_migration_engine_darwin",
)

# === rules_js ===
bazel_dep(name = "aspect_rules_js", version = "1.30.0")
npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = False)
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
    link_workspace = "rules_prisma",
)
use_repo(npm, "npm")

# === rules_ts ===
# bazel_dep(name = "aspect_rules_ts", version = "1.4.5")
# rules_ts_ext = use_extension(
#     "@aspect_rules_ts//ts:extensions.bzl",
#     "ext",
#     dev_dependency = True,
# )
# rules_ts_ext.deps()
# use_repo(rules_ts_ext, "npm_typescript")

# === simple deps ===
bazel_dep(name = "aspect_bazel_lib", version = "1.32.1")
bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_go", version = "0.41.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.32.0")

# === go dependencies ===
deps = use_extension(
    "@rules_prisma//prisma:deps.bzl",
    "deps",
    dev_dependency = False
)
use_repo(
    deps,
    "com_github_iancoleman_strcase",
    "com_github_joho_godotenv",
    "com_github_shopspring_decimal",
    "com_github_steebchen_prisma_client_go",
    "com_github_takuoki_gocase",
    "org_golang_x_mod",
    "org_golang_x_sys",
    "org_golang_x_text",
    "org_golang_x_tools",
)
