load("//prisma:js.bzl", "prisma_generate_js")
load("//prisma:go.bzl", "prisma_generate_go")
load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@aspect_rules_js//js:defs.bzl", "js_binary")

prisma_generate_js(
    name = "js",
    schema = "schema.prisma",
    generator_name = "client",
    generator_output = "gen/client",
    visibility = ["//visibility:public"],
)

prisma_generate_go(
    name = "go",
    schema = "schema.prisma",
    importpath = "github.com/davidmcnamee/rules_prisma/test/gen/client_go",
    generator_name = "client_go",
    generator_output = "gen/client_go",
    visibility = ["//visibility:public"],
)

js_binary(
    name = "js_bin",
    entry_point = "test.js",
    data = [
        ":js",
    ]
)

go_binary(
    name = "go_bin",
    srcs = [
        "test.go",
    ],
    deps = [
        ":go",
    ],
    data = [
        "dev.db",
    ],
    env = {
        "DATABASE_URL": "$(location dev.db)",
    },
)
